crates/hir-ty/tests/snapshots/jls_conversions__boxing_unboxing_contexts.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
assertion_line: 78
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        Integer a = 5;
        int un = a;
        Number n = 8;
        Object o = true;
    }
}

method m(): void
  locals: l0: java.lang.Integer | l1: int | l2: java.lang.Number | l3: java.lang.Object
  exprs: e0: int | e1: java.lang.Integer | e2: int | e3: boolean
