crates/hir-ty/tests/snapshots/jls_conversions__capture_assignment_context.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m(java.util.List<? extends java.lang.Number> up,
           java.util.List<?> any) {
        java.lang.Number n = up.get(0);
        Object o = any.get(0);
        String bad = up.get(0);
    }
}

method m(java.util.List<? extends java.lang.Number>, java.util.List<?>): void
  locals: l0: java.util.List<? extends java.lang.Number> | l1: java.util.List<?> | l2: java.lang.Number | l3: java.lang.Object | l4: java.lang.String
  exprs: e0: int | e1: java.util.List<? extends java.lang.Number> | e2: CAP#0 | e3: int | e4: java.util.List<?> | e5: CAP#1 | e6: int | e7: java.util.List<? extends java.lang.Number> | e8: CAP#0
  diags: e8@7:20: incompatible-types: incompatible types: CAP#0 cannot be converted to String
