crates/hir-ty/tests/snapshots/jls_conversions__constant_narrowing.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
assertion_line: 126
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        byte b = 100;
        short s = 300;
        char c = 65;
        byte sum = 50 + 50;
    }
}

method m(): void
  locals: l0: byte | l1: short | l2: char | l3: byte
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: int
