crates/hir-ty/tests/snapshots/jls_conversions__constant_variable_narrowing.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        final int N = 100;
        byte b = N;
        final int Z = 200;
        char c = Z;
        final char L = 'a';
        int i = L;
        final int BIG = 300;
        byte bad = BIG;
    }
}

method m(): void
  locals: l0: int | l1: byte | l2: int | l3: char | l4: char | l5: int | l6: int | l7: byte
  exprs: e0: int | e1: int | e2: int | e3: int | e4: char | e5: char | e6: int | e7: int
  diags: e7@11:19: incompatible-types: Incompatible types. Found: 'int', required: 'byte'
