crates/hir-ty/tests/snapshots/jls_conversions__inconvertible_cast.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        Integer bad = (Integer) "lit";
    }
}

method m(): void
  locals: l0: java.lang.Integer
  exprs: e0: <error> | e1: java.lang.Integer
  diags: e0@4:32: bad-cast: inconvertible types: String cannot be cast to Integer
