crates/hir-ty/tests/snapshots/jls_conversions__reference_casting.snap
---
source: crates/hir-ty/tests/jls_conversions.rs
assertion_line: 119
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m(Object o, Number n) {
        String s = (String) o;
        Integer i = (Integer) n;
    }
}

method m(java.lang.Object, java.lang.Number): void
  locals: l0: java.lang.Object | l1: java.lang.Number | l2: java.lang.String | l3: java.lang.Integer
  exprs: e0: java.lang.Object | e1: java.lang.String | e2: java.lang.Number | e3: java.lang.Integer
